# learn-to-calibrate

./: .gitignore  .gitmodules  README.md  train.py
Environment/: .gitignore  build.sh
Environment/fasterlio/: CMakeLists.txt
Environment/fasterlio/app/: CMakeLists.txt  bind.cpp  main.cpp  run_mapping_offline.cc
Environment/fasterlio/config/: csc.yaml  mcd_tuhh.yaml  mid360-d455.yaml  ntu-viral.yaml  velodyne.yaml
Environment/fasterlio/include/: imu_processing.hpp  laser_mapping.h  utils.h
Environment/fasterlio/include/fast_evo/: evo_ape.hpp
Environment/fasterlio/include/ivox3d/: ivox3d.h
Environment/fasterlio/src/: CMakeLists.txt  laser_mapping.cc  pointcloud_preprocess.cc
Environment/process_module/: CMakeLists.txt  process_bag.cpp
Environment/process_module/include/: compute_eigen.hpp  segment_helper.hpp
Environment/process_module/include/basalt/spline/: se3_spline.h
Environment/process_module/include/factor/: imu_factor.h  mocap_pose_factor.hpp
Environment/process_module/include/trajectory/: trajectory_estimator.hpp
Environment/process_module/log/: built_traj.txt
demo/: calib.sh  calib_csc.sh  calib_mcd.sh  calib_ntu.sh
rl_solver/: .gitignore  train.py
rl_solver/bingham/: gram_schmidt.py  torch_bingham.py  utils.py
rl_solver/rl_solver/: __init__.py  buffer.py  common.py  ppo.py  solver.py
